mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: ingress-nginx
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:latest
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: my-pvc 

---
# apiVersion: v1
# kind: Service
# metadata:
#   name: mysql-service
#   namespace: ingress-nginx
#   labels:
#     app: mysql
# spec:
#   selector:
#     app: mysql
#   ports:
#     - protocol: TCP
#       port: 3306
#       targetPort: 3306
#   type: LoadBalancer
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: ingress-nginx
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
